--- a/examples/configFiles/deepMedic/model/modelConfig_small_10train_3.cfg
+++ b/examples/configFiles/deepMedic/model/modelConfig_small_10train_3.cfg
@@ -3,10 +3,10 @@
 
 #  [Optional but highly suggested] The name will be used in the filenames when saving the model.
 #  Default: "cnnModel"
-modelName = "deepMedic"
+modelName = "deepMedic_small_10train"
 
 #  [Required] The main folder that the output will be placed.
-folderForOutput = "../../../output_large_cnn/"
+folderForOutput = "../../../output_small_cnn_10train/"
 
 
 #  ================ MODEL PARAMETERS =================
@@ -19,7 +19,7 @@ numberOfInputChannels = 1
 #  +++++++++++Normal pathway+++++++++++
 #  [Required] This list should have as many entries as the number of layers I want the normal-pathway to have.
 #  Each entry is an integer that specifies the number of Feature Maps to use in each of the layers.
-numberFMsPerLayerNormal = [30, 30, 40, 40, 40, 40, 50, 50]
+numberFMsPerLayerNormal = [12, 15, 18, 21, 24, 27, 30, 33]
 #  [Required] This list should have as many entries as the number of layers in the normal pathway.
 #  Each entry should be a sublist with 3 entries. These should specify the dimensions of the kernel at the corresponding layer.
 kernelDimPerLayerNormal = [[3,3,3], [3,3,3], [3,3,3], [3,3,3], [3,3,3], [3,3,3], [3,3,3], [3,3,3]]
@@ -43,7 +43,7 @@ useSubsampledPathway = True
 #  [Optionals] The below parameters specify the subsampled-pathway architecture in a similar way as the normal.
 #  If they are ommitted and useSubsampledPathway is set to True, the subsampled pathway will be made similar to the normal pathway (suggested for easy use).
 #  [WARN] Subsampled pathway MUST have the same size of receptive field as the normal. Limitation in the code. User could easily specify different number of FMs. But care must be given if number of layers is changed. In this case, kernel sizes should also be adjusted to achieve same size of Rec.Field.
-numberFMsPerLayerSubsampled = [30, 30, 40, 40, 40, 40, 50, 50]
+numberFMsPerLayerSubsampled = [12, 15, 18, 21, 24, 27, 30, 33]
 kernelDimPerLayerSubsampled = [[3,3,3], [3,3,3], [3,3,3], [3,3,3], [3,3,3], [3,3,3], [3,3,3], [3,3,3]]
 
 #  [Optional] How much to downsample the image that the subsampled-pathway processes.
@@ -65,7 +65,7 @@ layersWithResidualConnSubsampled = [4,6,8]
 #  [Optional] After the last layers of the normal and subsampled pathways are concatenated, additional hidden layers can be added before the final classification layer.
 #  Specify a list, with as many entries as the number of ADDITIONAL HIDDEN FC layers (other than the classification layer) to add. Entries specify the number of Feature Maps to use.
 #  Default: []
-numberFMsPerLayerFC = [250, 250]
+numberFMsPerLayerFC = [150, 150]
 
 #  [Optional] Specify dimensions of kernels in the last hidden layers, between concatenation of multi-scale features and the output SoftMax.
 #  Note: Should have as many sublists as the number of layers in the path. Equal to integers in list (numberFMsPerLayerFC), +1 for the final classification layer.
