--- a/examples/configFiles/deepMedic/dataConfig/tst_3fold_pred.cfg
+++ b/examples/configFiles/deepMedic/dataConfig/tst_3fold_pred.cfg
@@ -3,3 +3,8 @@ pred0037_reoriented.nii.gz
 pred0038_reoriented.nii.gz
 pred0039_reoriented.nii.gz
 pred0040_reoriented.nii.gz
+pred0026_reoriented.nii.gz
+pred0027_reoriented.nii.gz
+pred0028_reoriented.nii.gz
+pred0029_reoriented.nii.gz
+pred0030_reoriented.nii.gz
