--- a/examples/configFiles/deepMedic/test/testConfig_5train_15pseudolbs.cfg
+++ b/examples/configFiles/deepMedic/test/testConfig_5train_15pseudolbs.cfg
@@ -3,10 +3,10 @@
 
 #  [Optional but highly suggested] The name will be used for naming folders to save the results in.
 #  Default: "testSession"
-sessionName = "5train_15pseudo_labels"
+sessionName = "model_1_10_tst"
 
 #  [Required] The main folder that the output will be placed.
-folderForOutput = "../../../output_small_cnn_5test_5train_15pseudo_lbs_pd/"
+folderForOutput = "../../../model_1_10_tst/"
 
 #  [Optional] Path to a saved model, to load parameters from in the beginning of the session. If one is also specified using the command line, the latter will be used.
 #cnnModelFilePath = "../../../output/models/placeholder"
