15 pseudo lbls, model1

--- a/examples/configFiles/deepMedic/dataConfig/semi_5train_10_pseudo_labels_names.cfg
+++ b/examples/configFiles/deepMedic/dataConfig/semi_5train_10_pseudo_labels_names.cfg
@@ -8,3 +8,8 @@ pred0022_reoriented.nii.gz
 pred0023_reoriented.nii.gz
 pred0024_reoriented.nii.gz
 pred0025_reoriented.nii.gz
+pred0031_reoriented.nii.gz
+pred0032_reoriented.nii.gz
+pred0033_reoriented.nii.gz
+pred0034_reoriented.nii.gz
+pred0035_reoriented.nii.gz
