--- a/examples/configFiles/deepMedic/train/trainConfig_small_20train_semi_dev.cfg
+++ b/examples/configFiles/deepMedic/train/trainConfig_small_20train_semi_dev.cfg
@@ -139,6 +139,14 @@ augmentation_image = {
                         }
                      }
 
+augmentation_ulb_image = {
+                        "RandomAffineTransformation": {
+                            'prob': 0.0,
+                            'max_rot_xyz': (15., 15., 15.),
+                            'max_scaling': 0.1,
+                            'interp_order_imgs': 1
+                        }
+                     }
 # [Optional] Augmentation applied on segment-level. Comment it out or set to None for no augmentation. (Default: None)
 # hist_dist: Shift and scale the intensity histogram. I' = (I + shift) * scale
 #            Shift and scale values are sampled from Gaussians N(mu,std).
@@ -148,6 +156,23 @@ augmentation_image = {
 #            Give probabilities of flipping a plane by 0,90,180,270 degrees. Sum is internally normalised to 1.
 #            NOTE: Size of segment must be isotropic otherwise error will be raised.
 augmentation_sample = {
+                        'RandomHistogramDistortion': {
+                            'prob': 1.,
+                            'shift': {'mu': 0., 'std': 0.05},
+                            'scale': {'mu': 1., 'std': 0.01}
+                        },
+                        'RandomFlip': {'prob': 0., 'prob_flip_axes': (0.5, 0., 0.)},
+                        'RandomRotation90': {
+                            'prob' : 0.,
+                            'prob_rot_90': {
+                                'xy': {'0': 0., '90': 0., '180': 0., '270': 0.},
+                                'yz': {'0': 0., '90': 0., '180': 0., '270': 0.},
+                                'xz': {'0': 0., '90': 0., '180': 0., '270': 0.}
+                            }
+                        }
+                      }
+
+augmentation_ulb_sample = {
                         'RandomHistogramDistortion': {
                             'prob': 1.,
                             'shift': {'mu': 0., 'std': 0.05},
