--- a/examples/configFiles/deepMedic/train/trainConfig_small_20train_semi_dev.cfg
+++ b/examples/configFiles/deepMedic/train/trainConfig_small_20train_semi_dev.cfg
@@ -132,7 +132,7 @@ numEpochsToWaitBeforeLoweringLr = 10
 #         'interp_order_imgs': Interpolation order for images (0, 1 or 2), higher is better but slower (suggested: 1 or 2).
 augmentation_image = {
                         "RandomAffineTransformation": {
-                            'prob': 0.0,
+                            'prob': 0.125, # used to be 0.0
                             'max_rot_xyz': (15., 15., 15.),
                             'max_scaling': 0.1,
                             'interp_order_imgs': 1
@@ -157,11 +157,11 @@ augmentation_ulb_image = {
 #            NOTE: Size of segment must be isotropic otherwise error will be raised.
 augmentation_sample = {
                         'RandomHistogramDistortion': {
-                            'prob': 1.,
+                            'prob': 0., # 1.
                             'shift': {'mu': 0., 'std': 0.05},
                             'scale': {'mu': 1., 'std': 0.01}
                         },
-                        'RandomFlip': {'prob': 0., 'prob_flip_axes': (0.5, 0., 0.)},
+                        'RandomFlip': {'prob': 0.5, 'prob_flip_axes': (0.5, 0., 0.)}, # used to be 0.
                         'RandomRotation90': {
                             'prob' : 0.,
                             'prob_rot_90': {
