weak augmentation for 15 unlabeled data

--- a/examples/configFiles/deepMedic/test/testConfig_get_pseudoLabelsFor15UnlabeledData.cfg
+++ b/examples/configFiles/deepMedic/test/testConfig_get_pseudoLabelsFor15UnlabeledData.cfg
@@ -38,7 +38,7 @@ saveProbMapsForEachClass = [True, True, True, True, True, True, True, True, True
 
 #  +++++++++++Feature Maps+++++++++++
 #  [Optionals] Specify whether to save the feature maps. Default: False
-#saveIndividualFms = True
+saveIndividualFms = True
 
 #  [Optionals] A model may have too many feature maps, and some may not be needed. For this, we allow specifying which FMs to save. 
 #  Specify for each type of pathway (normal/subsampled/FC), a list with as many sublists as the layers of the pathway.
